# language_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/benchmarks/: sample_qa.jsonl
data/sample_docs/: rag_overview.md
docs/: design.md  evaluation.md
scripts/: rag_cli.py
src/language_assistant/: __init__.py  citations.py  cli.py  config.py  documents.py  evaluation.py  ingest.py  rag.py  vector_store.py
tests/: test_citations.py  test_evaluation.py
