[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-assistant"
version = "0.1.0"
description = "Citation-grounded academic document RAG assistant with FAISS and OpenAI."
requires-python = ">=3.10"
dependencies = [
  "faiss-cpu>=1.8.0",
  "langchain>=0.2.14",
  "langchain-community>=0.2.12",
  "langchain-openai>=0.1.22",
  "openai>=1.40.0",
  "pypdf>=4.3.1",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
language-assistant = "language_assistant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
